@@ -6,6 +6,7 @@
 * Implemented A, B, C, D and K weightening filters.
 * Methods save and save_range of dspu::Sample are marked as const.
 * Marked dspu::Sample::getBuffer as deprecated, use dspu::Sample::channel instead.
+* Added dspu::Sample::remove method to remove part of sample data.
 
 === 1.0.9 ===
 * Changed visibility of the dspu::InSampleStream class to public.
